@startuml
skinparam classAttributeIconSize 0
hide empty members

package shapes {
    class Shape << (T,#FF7700) Trait >> {
        + name(&self)
        + area(&self)
        + perimeter(&self)
    }

    package factory {
        enum KnownShape {
            Circle
            Square
            Triangle
            RightTriangle
            EquilateralTriangle
        }

        class Factory {

        }
    }

    package circle {
        class Circle {
            + radius: f64
            + diameter(&self) -> f64
        }
    }

    package square {
        class Square {
            + side: f64
        }
    }

    package triangle {
        class Triangle {
            + side_a: f64
            + side_b: f64
            + side_c: f64
        }
    }

    package right_triangle {
        class RightTriangle {
            + base: f64
            + height: f64
            + hypotenuse(&self) -> f64
        }
    }

    package equilateral_triangle {
    class EquilateralTriangle {
        + side: f64
        + height(&self) -> f64
    }
    }
}

package std::fmt {
    class Display << (T,#FF7700) Trait >> {
        + fmt(&self, f: &mut fmt::Formatter)
    }
}

Circle ..|> Shape
Circle .[#blue]...|> Display

Square ..|> Shape
Square .[#blue]...|> Display

Triangle ..|> Shape
Triangle .[#blue]...|> Display

RightTriangle ..|> Shape
RightTriangle .[#blue]...|> Display

EquilateralTriangle ..|> Shape
EquilateralTriangle .[#blue]...|> Display

KnownShape ..|> Shape
KnownShape .[#blue]...|> Display

Factory .[#blue]...|> Display

@enduml
